# openalex.author.abstract.digger

./: .gitignore  INSTRUCTIONS.md  README.md  __init__.py  abstract_extractor.py  app.py  app_rag.py  author_resolver.py  deploy.sh  gemini_analyzer.py  gemini_routes.py  gemini_store.py  index.html  index.legacy.html  llm_adapters.py  main.py  pyproject.toml  requirements-rag.txt  requirements.txt  test_pubmed.py  ux_review.md  works_fetcher.py  works_service.py
deploy/: Caddyfile  gunicorn.conf.py  openalex-digger.service  setup-droplet.sh
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/components/: AuthorCard.svelte  CorpusPanel.svelte  DisambiguationModal.svelte  ExtractionSummary.svelte  IntelligencePanel.svelte  ProgressBar.svelte  QAInput.svelte  SearchBar.svelte  SettingsPanel.svelte  SourceBadge.svelte  SynthesisCard.svelte  Timeline.svelte  WorkCard.svelte
